# Job-Scraper-AI

./: .env.example  .gitignore  README.md  pyproject.toml
src/job_scraper_ai/: __init__.py  cli.py  config.py
src/job_scraper_ai/models/: __init__.py  job.py
src/job_scraper_ai/scrapers/: __init__.py  base.py  indeed.py
src/job_scraper_ai/services/: __init__.py  exporter.py
tests/: test_exporter.py  test_indeed_scraper.py  test_job_model.py
tests/fixtures/: indeed_page_1.html  indeed_page_2.html
